tests/build/fail/widget/invalid_unset1.stderr
error: cannot unset, property `cursor` is not inherited
 --> $DIR/invalid_unset1.rs:8:39
  |
8 |         zero_ui::properties::cursor = unset!;
  |                                       ^^^^^

error: cannot unset, property `spacing` is not inherited
 --> $DIR/invalid_unset1.rs:9:29
  |
9 |         margin as spacing = unset!;
  |                             ^^^^^

error: cannot unset, property `margin` is not inherited
  --> $DIR/invalid_unset1.rs:10:18
   |
10 |         margin = unset!;
   |                  ^^^^^

warning: unused import: `zero_ui::properties::margin`
 --> $DIR/invalid_unset1.rs:5:9
  |
5 |     use zero_ui::properties::margin;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
